fixed the mobile countryinfo being kinda off center

--- a/src/components/css-files/CountryInfo.css
+++ b/src/components/css-files/CountryInfo.css
@@ -135,6 +135,7 @@ span {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-right: 2%;
   }
   .country-info__stats {
     flex-direction: column;
